feat - create a root page where we will check for update and then navigate to tabs root

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,7 +8,6 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/about/about";
-
 @import "../pages/contact/contact";
-
 @import "../pages/home/home";
+@import "../pages/root";
